--- a/generation-ch16/2-intro-web/html/index.html
+++ b/generation-ch16/2-intro-web/html/index.html
@@ -16,14 +16,53 @@
 
     <hr> </hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore porro commodi explicabo quam itaque beatae voluptatibus! Nulla ab quod veritatis minus iste incidunt ea molestiae ullam est! Hic, mollitia veniam?</p>
-
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odit explicabo nisi alias at esse officia sequi? Velit, unde earum? Deleniti, dolore asperiores? Velit, quisquam ex? Modi numquam temporibus voluptas?</p>
-
-    
+    <p id="parrafo1"></p>
+    <br>
+    <p id="parrafo2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odit explicabo nisi alias at esse officia sequi? Velit, unde earum? Deleniti, dolore asperiores? Velit, quisquam ex? Modi numquam temporibus voluptas?</p>
+    <p id="parrafo3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quisquam dicta asperiores dignissimos iusto mollitia laboriosam similique voluptate, sint accusantium suscipit placeat ipsa quia quasi neque hic. Quidem, similique blanditiis!</p>
+    <p id="parrafo4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non culpa facere vitae doloremque eaque molestias officiis rerum reiciendis numquam, sequi, earum laboriosam nobis veniam saepe atque? Autem vero eligendi quidem?</p>
     <hr>
 
     <!-- Enlaces -->
     <a href="https://www.google.com/"target="_blank">Este es un enlace</a>
+
+    <br>
+    <br>
+    <a href="mailto:oscar@gmail.com">Enviar correo</a>
+    <br>
+    <br>
+    <a href="tel:+525555555555">Llamar</a>
+    <br>
+    <br>
+    <a href="assets/pages/pagina2.html">Ir a pagina 2</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <a href=#parrafo1> Ir a parrafo 1</a>
+
+
 
 </body>
 </html>
