Introduccion a CSS y HTML avanzado

--- a/generation-ch16/2-intro-web/introCss/index.html
+++ b/generation-ch16/2-intro-web/introCss/index.html
@@ -1,29 +1,92 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
     <style type="text/css" media="all">
         * {
             font-size: 1rem;
-        }     
-        p.aviso{
+        }
+
+        p.aviso {
             color: blueviolet;
         }
-        div.nuevo{
+
+        div.nuevo {
             color: #549851;
         }
-    </style> 
-    <!--<link rel="stylesheet" href="assets/style.css"-->
+    </style>
+    <style>
+        *.univ {
+            color: chocolate;
+        }
+    </style>
+    <style>
+        *.univ1 {
+            color: aqua;
+        }
+    </style>
+    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/selector.css">
+    
+    <!-- Selector ID, E#e, almoadilla # -->
+    <link rel="stylesheet" href="">
+    <style>
+        p#alm1 {
+            color: rgb(0, 13, 128);
+        }
+    </style>
 </head>
+
 <body>
-    <h1 >Esto es una prueba</h1>
-    <div class = "nuevo">
-         Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Obcaecati temporibus possimus, laborum officiis  <br> rerum nisi beatae assumenda dolor ratione amet atque reprehenderit cumque <br> pariatur doloribus recusandae non culpa.
+    <h1>Esto es una prueba</h1>
+    <!-- Primer selector de clase-->
+    <div class="nuevo">
+        Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Obcaecati temporibus possimus, laborum officiis
+        <br> rerum nisi beatae assumenda dolor ratione amet atque reprehenderit cumque <br> pariatur doloribus
+        recusandae non culpa.
     </div>
-    <p class = "aviso">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum commodi voluptas placeat sunt, velit ullam quos quia repellendus impedit cum, tenetur praesentium? Ipsam, dolorum! Debitis eos accusantium magnam quam sunt?</p>
+    <!-- Selector de clase E.e-->
+    <p class="aviso">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum commodi voluptas placeat sunt, velit
+        ullam quos quia repellendus impedit cum, tenetur praesentium? Ipsam, dolorum! Debitis eos accusantium magnam
+        quam sunt?</p>
     <br>
+
+    <br>
+    <br>
+    <p class="univ">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos voluptate quae deleniti ipsam.
+        Soluta, aperiam quas! Beatae odit tempore officiis laudantium dicta reprehenderit. Nemo aliquam ullam possimus
+        aspernatur quod.
+    </p>
+    <br>
+
+    <br>
+    <br>
+    <br>
+    <p class="univ1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quaerat eum deserunt aperiam minus
+        odit magnam fugit odio aut dicta? Deserunt voluptatibus quam aliquam omnis saepe illo voluptatem! Ipsum, maxime.
+    </p>
+    <br>
+    <br><br><br><br>
+    <p id="alm1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta cum, laboriosam esse nam voluptates
+        voluptatibus optio quas officia quidem! Error quam non maiores doloremque qui beatae quod autem ullam ipsa?</p>
+
+    <p> Esto es un parrafo 1</p>
+    <div>
+        <ul>
+            <li>
+                Esto es una lista
+                <p>Esto es otro parrafo interno</p>
+            </li>
+        </ul>
+        Esto es otro parrafo 3
+    </div>
 </body>
+
 </html>
