--- a/generation-ch16/2-intro-web/CSS-Avanzado/cajas.html
+++ b/generation-ch16/2-intro-web/CSS-Avanzado/cajas.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/CSS/cajas.css">
+    <!-- <link rel="stylesheet" href="assets/CSS/cajas.css"> -->
+    <link rel="stylesheet" href="assets/CSS/display.css">
     <title>Cajas</title>
 </head>
 <body>
-    <div class="cuadro el-1">1</div>
-    <div class="cuadro el-2">2</div>
-    <div class="cuadro el-3">3</div>
-    <div class="cuadro el-4">4</div>
-    <div class="cuadro el-5">5</div>
+    <div class="cuadro-padre">
+        <div class="cuadro el-1">1</div>
+        <div class="cuadro el-2">2</div>
+        <div class="cuadro el-3">3</div>
+        <div class="cuadro el-4">4</div>
+        <!--<div class="cuadro el-5">5</div>-->
+    </div>
+    <!-- Introduccion a Bootstrap-->
+    <div class="contenedor">
+        <div class="fila">
+            <div class="columna" style="background-color: red;">1</div>
+            <div class="columna" style="background-color: green;">2</div>
+            <div class="columna" style="background-color: blue;">3</div>
+
+        </div>
+    </div>
+
 </body>
 </html>
