--- a/generation-ch16/2-intro-web/Bootstrap-4/index.html
+++ b/generation-ch16/2-intro-web/Bootstrap-4/index.html
@@ -1,17 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="miCSS/style.css">
     <title>Introduccion a Bootstrap</title>
 </head>
+
 <body>
-    <h1>Introduccion a Bootstrap</h1>
+    <!--     <h1>Introduccion a Bootstrap</h1>
     <h2>Esto es una introduccion</h2>
-    <button>Soy un boton</button>
+    <button class="btn-success">Soy un boton</button> -->
+    <div class="container border">
+        <header id="header" class="col-12 bg-primary text-white p-2">
+            <h2>Esto solo es una Introducción</h2>
+        </header>
+    
+        <!-- Menú -->
+        <nav id="menu" class="col-12 bg-secondary">
+            <ul class="row w-100">
+                <li class="col">Inicio</li>
+                <li class="col">Página 1</li>
+                <li class="col">Página 2</li>
+                <li class="col">Página 3</li>
+                <li class="col">Contacto</li>
+            </ul>
+        </nav>
+        <!-- Contenido-->
+        <!-- Barra lateral-->
+        <section class="col-12 border">
+            <div class="row">
+                <!-- Contenido de productos-->
+                <section class="col-9 border">
+                    <h2>Productos</h2>
+                    <div class="item row">
+                        <div class="item col-3 bg-primary m-2">
+                            Producto 1
+                        </div>
+                        <div class="item col-3 bg-secondary m-2">
+                            Producto 2
+                        </div>
+                        <div class="item col-3 bg-danger m-2">
+                            Producto 3
+                        </div>
+                        <div class="item col-3 bg-primary m-2">
+                            Producto 4
+                        </div>
+                        <div class="item col-3 bg-secondary m-2">
+                            Producto 5
+                        </div>
+                        <div class="item col-3 bg-danger m-2">
+                            Producto 6
+                        </div>
+                        <div class="item col-3 bg-primary m-2">
+                            Producto 7
+                        </div>
+                        <div class="item col-3 bg-secondary m-2">
+                            Producto 8
+                        </div>
+                        <div class="item col-3 bg-danger m-2">
+                            Producto 9  
+                        </div>
+                        
+                    </div>
+                </section>
+                <!-- Barra lateral-->
+                <aside class="col-3">
+                    <h2>Barra lateral</h2>
+                </aside>
+            </div>
+        </section>
+        <footer class="col-lg-12 bg-info">
+            Esto es un Footer
+        </footer>
+        <!-- Barra lateral-->
+    </div>
     <script type="text/javascript" src="jQuery/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 </body>
-</html>
+
+</html>     
