--- a/generation-ch16/3-Javascript/js-03/index.html
+++ b/generation-ch16/3-Javascript/js-03/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,6 @@
 </head>
 <body>
     
-
-    <script src="assets/JS/funcion-3.js"></script>
+    <script src="assets/JS/main.js"></script>
 </body>
 </html>
