--- a/generation-ch16/Ejercicios codigo/index.html
+++ b/generation-ch16/Ejercicios codigo/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-    <script src="assets/JS/funcion-3.js"></script>
+    <script src="assets/JS/qwerty.js"></script>
 </body>
 </html>
