--- a/generation-ch16/3-Javascript/js-5/index.html
+++ b/generation-ch16/3-Javascript/js-5/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arreglos y bucles</title>
+    <title>Document</title>
 </head>
 <body>
     
 
-    <script src="assets/JS/otrosMetodos.js"></script>
+    <script src="expresion.js"></script>
 </body>
 </html>
